@@ -1,6 +1,6 @@
 #!/usr/bin/perl -w
 
-# daemon-ctl 1.0, 2000/06/14 (dws)
+# daemon-ctl 1.1, 2001/02/17 (dws)
 
 use strict;
 
@@ -13,6 +13,7 @@ my $PIDFILE="$PIDDIR/$name.pid";
 
 -d "$PIDDIR" || mkdir("$PIDDIR",755) || die "$0: can't mkdir $PIDDIR\n";
 
+my $usage=1;
 if($action eq 'stop' || $action eq 'restart') {
 	print "stopping $name...";
 	if(open(PID, "<$PIDFILE")) {
@@ -26,6 +27,7 @@ if($action eq 'stop' || $action eq 'restart') {
 	else {
 		print " no pid.\n";
 	};
+	$usage=0;
 }
 if($action eq 'start' || $action eq 'restart') {
 	print "starting $name...";
@@ -44,6 +46,7 @@ if($action eq 'start' || $action eq 'restart') {
 			exec(@args) or die "$0: can't exec @args\n";
 		}
 	}
+	$usage=0;
 }
 if($action eq 'getpid') {
 	open(PID, "<$PIDFILE") or do {
@@ -52,6 +55,10 @@ if($action eq 'getpid') {
 	};
 	my $pid=<PID>;
 	print "$pid";
+	$usage=0;
+}
+if($usage) {
+	print "usage: $0 {start|restart|stop|getpid}\n";
 }
 
 exit 0;
